plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
    id 'org.beryx.runtime' version '1.11.4'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'com.jfoenix', name: 'jfoenix', version: '9.0.10'
    implementation project(':Shared')
}

/* Fields */
def jvmArgs
def options

/* Task Modifiers, etc... */
java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(14))
    }
}

javafx {
    modules = ['javafx.controls', 'javafx.fxml']
    version = '14.0.2'
}

application {
    mainClass.set("application.Launcher")
    applicationName = 'OpenRAMT'
}

run {
    jvmArgs = [
            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--illegal-access=permit"
    ]
}

runtime {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        noConsole = true
        jvmArgs = [
                "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                "--illegal-access=permit"
        ]
    }
    jpackage {
        def currentOs = org.gradle.internal.os.OperatingSystem.current()
        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
        imageOptions += ['--icon', "src/main/resources/openramt.$imgType"]
        appVersion = "0.0.1"
        installerOptions += ['--resource-dir', "src/main/resources"]
        installerOptions += ['--vendor', 'Nex']
        if(currentOs.windows) {
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
        }
        else if (currentOs.linux) {
            installerOptions += ['--linux-package-name', applicationName,'--linux-shortcut']
            installerType = 'msi'
        }
        else if (currentOs.macOsX) {
            installerOptions += ['--mac-package-name', applicationName]
        }
    }
}